# fileharbor

./: .gitignore  CLIENT_QUICK_START.md  COMPLETION.md  CONFIG_TOOL_GUIDE.md  LICENSE  PHASE3_SUMMARY.md  PHASE4_QUICKSTART.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PHASE6_SUMMARY.md  PHASE7_SUMMARY.md  PROJECT_STATUS.md  README.md  WINDOWS_QUICKREF.md  WINDOWS_SETUP.md  WINDOWS_SETUP_SUMMARY.md  check_config.py  cli1_config.json  client_config.json.decrypted  environment.yml  my_test.py  pyproject.toml  run_tests.py  server_config1.json  setup_windows.bat  test.bat  test_python313.py  test_ssl_certs.py
.fileharbor_backups/: server_config.json.20251018_024838.backup  serverconfig.json.20251017_032100.backup  serverconfig.json.20251017_032926.backup  serverconfig.json.20251017_035555.backup
examples/: async_client_example.py  sync_client_example.py
src/fileharbor/: __init__.py  __version__.py
src/fileharbor/client/: __init__.py  async_client.py  client.py  config.py  connection.py  progress.py  transfer_manager.py
src/fileharbor/common/: __init__.py  config_schema.py  constants.py  crypto.py  exceptions.py  protocol.py  validators.py
src/fileharbor/config_tool/: __init__.py  backup.py  certificate_manager.py  cli.py  client_config_exporter.py  encryption.py  menu.py  server_config_editor.py
src/fileharbor/server/: __init__.py  auth.py  cli.py  config.py  connection_handler.py  file_operations.py  library_manager.py  rate_limiter.py  server.py  session_manager.py
src/fileharbor/utils/: __init__.py  checksum.py  compression.py  file_utils.py  network_utils.py
tests/test_common/: test_exceptions.py  test_validators.py
tests/test_e2e/: test_scenarios.py
tests/test_integration/: test_server_client.py
tests/test_performance/: benchmark.py
tests/test_security/: test_security.py
