[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fileharbor"
version = "0.1.0"
description = "Secure file transfer library with mTLS authentication and resumable transfers"
readme = "README.md"
authors = [
    {name = "FileHarbor Team", email = "info@fileharbor.example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["file-transfer", "mtls", "secure", "encryption", "resumable", "tls", "certificate"]
requires-python = ">=3.13"
dependencies = [
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "pylint>=2.17.0",
    "mypy>=1.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[project.scripts]
fileharbor-server = "fileharbor.server.cli:main"
fileharbor-config = "fileharbor.config_tool.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/fileharbor"
Documentation = "https://fileharbor.readthedocs.io"
Repository = "https://github.com/yourusername/fileharbor"
"Bug Tracker" = "https://github.com/yourusername/fileharbor/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fileharbor = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=fileharbor --cov-report=html --cov-report=term"

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true once typing is complete
ignore_missing_imports = true
